--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%vh;
+    margin: 0;
+    background-image: url("https://source.unsplash.com/1600x900/?landscape");
+}
 input:invalid {
     border: 3px solid red;
 }
@@ -6,5 +14,11 @@ input:valid {
     border: 3px solid green;
 }
 
-
-
+.appTitle,
+.cityDisplay,
+.kelvin,
+.fahrenheit,
+.celsius,
+.conditions  {
+    color: white;
+}
